--- a/ui/style/fontello/css/fontello.css
+++ b/ui/style/fontello/css/fontello.css
@@ -1,10 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?69681131');
-  src: url('../font/fontello.eot?69681131#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?69681131') format('woff'),
-       url('../font/fontello.ttf?69681131') format('truetype'),
-       url('../font/fontello.svg?69681131#fontello') format('svg');
+  src: url('../font/fontello.eot?93418225');
+  src: url('../font/fontello.eot?93418225#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?93418225') format('woff2'),
+       url('../font/fontello.woff?93418225') format('woff'),
+       url('../font/fontello.ttf?93418225') format('truetype'),
+       url('../font/fontello.svg?93418225#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?69681131#fontello') format('svg');
+    src: url('../font/fontello.svg?93418225#fontello') format('svg');
   }
 }
 */
@@ -71,3 +72,9 @@
 .fontello-triangle-right:before { content: '\e80e'; } /* '' */
 .fontello-index:before { content: '\e80f'; } /* '' */
 .fontello-table:before { content: '\e810'; } /* '' */
+.fontello-trash-empty:before { content: '\e811'; } /* '' */
+.fontello-cancel-alt-filled:before { content: '\e812'; } /* '' */
+.fontello-cancel-alt:before { content: '\e813'; } /* '' */
+.fontello-cancel-squared:before { content: '\e814'; } /* '' */
+.fontello-cancel:before { content: '\e815'; } /* '' */
+.fontello-check-empty:before { content: '\f096'; } /* '' */
