--- a/ui/style/app.css
+++ b/ui/style/app.css
@@ -3,7 +3,7 @@
 @import url(./codemirror.css);
 @import url(./draft.css);
 @import url(./execbar.css);
-@import url(./login_form.css);
+@import url(./loginform.css);
 @import url(./output.css);
 @import url(./output_message.css);
 @import url(./popup.css);
