--- a/ui/style/loginform.css
+++ b/ui/style/loginform.css
@@ -1,4 +1,4 @@
-.login_form {
+.loginform {
   width: 200px;
   position: absolute;
   top: 30%;
@@ -6,8 +6,8 @@
   margin-left: -100px;
 }
 
-.login_form__password,
-.login_form__user {
+.loginform-password,
+.loginform-user {
   display: block;
   width: 100%;
   line-height: 2;
@@ -18,12 +18,12 @@
   border-bottom: 1px solid #888;
 }
 
-.login_form__password:focus,
-.login_form__user:focus {
+.loginform-password:focus,
+.loginform-user:focus {
   outline: none;
 }
 
-.login_form__submit {
+.loginform-submit {
   display: block;
   margin: 0 auto;
   /*background: transparent;*/
@@ -33,7 +33,7 @@
   /*text-decoration: dotted;*/
 }
 
-.login_form__error {
+.loginform-error {
   color: red;
   margin: 1em;
 }
