--- a/ui/style/execbar.css
+++ b/ui/style/execbar.css
@@ -1,60 +1,41 @@
-.execBar {
+.execbar {
   padding: .2em;
   border-top-left-radius: .3em;
   white-space: nowrap;
+  background-color: var(--bg);
 }
 
-/*.light*/ .execBar {
-  background-color: #eee;
-}
-
-.dark .execBar {
-  background-color: #333;
-}
-
-/*button*/.execBar__execute,
-/*button*/.execBar__executeMap {
+/*button*/.execbar-execute,
+/*button*/.execbar-execute_map {
   outline: none;
   margin: 0;
   padding: 0;
   border: none;
-  color: inherit;
   background: none;
   font-family: inherit;
-  font-size: inherit;
   line-height: 1em;
   cursor: pointer;
   white-space: nowrap;
-
   border-top: 1px solid transparent; /* for simmetric align */
   border-bottom: 1px dotted;
   margin-left: .2em;
   margin-right: .2em;
   font-size: 0.8125em;
+  color: var(--fg);
 }
 
-/*.light*/ /*button*/.execBar__execute:hover,
-/*.light*/ /*button*/.execBar__executeMap:hover {
-  color: #333;
-}
-
-.dark /*button*/.execBar__execute:hover,
-.dark /*button*/.execBar__executeMap:hover {
-  color: orange;
-}
-
-/*button*/.execBar__execute {
+/*button*/.execbar-execute {
   font-weight: bold;
 }
 
-/*button*/.execBar__execute::-webkit-focus-inner,
-/*button*/.execBar__executeMap::-webkit-focus-inner {
+/*button*/.execbar-execute::-webkit-focus-inner,
+/*button*/.execbar-execute_map::-webkit-focus-inner {
   border: 0;
   padding: 0;
 }
 
-/*button*/.execBar__execute::-moz-focus-inner,
-/*button*/.execBar__executeMap::-moz-focus-inner {
+/*button*/.execbar-execute::-moz-focus-inner,
+/*button*/.execbar-execute_map::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
