--- a/ui/style/map.css
+++ b/ui/style/map.css
@@ -1,77 +1,5 @@
-@import url(../lib/leaflet/1.0.3/leaflet.css);
-
-.mapContainer {
+.map_container {
   display: block;
   width: 100%;
   height: 100%;
-}
-
-/*.light*/ .leaflet-container { background: #fcfcfc; color: #555; }
-/*.light*/ .leaflet-control-layers-expanded {  background-color: #fcfcfc; }
-/*.light*/ .leaflet-control-layers-separator { border-color: #ccc; }
-
-/*.light .leaflet-control-scale-line {
-  border-color: #aaa;
-  background-color: rgba(220, 220, 220, .3);
-} */
-
-
-
-.dark .leaflet-container { background: #222; color: #eee; }
-
-.dark .leaflet-control-layers-expanded {  background-color: #333; }
-.dark .leaflet-control-layers-separator { border-color: #555; }
-.dark .leaflet-control-scale-line:not(:first-child) { border-top-color: #222; }
-
-.dark .leaflet-control-scale-line {
-  background-color: rgba(0, 0, 0, .3);
-  border-color: #222;
-}
-
-
-
-
-
-.leaflet-control-layers-list {
-  margin: 0;
-}
-
-.leaflet-bar {
-  border-radius: 0;
-  *box-shadow: none;
-  *border: 2px solid rgba(0,0,0,.2);
-}
-
-.leaflet-bar a,
-.leaflet-bar a:hover {
-  border-radius: 0 !important;
-  color: inherit;
-  background-color: #333;
-  border-bottom-color: #555;
-}
-
-.leaflet-bar a:hover {
-  background-color: #444;
-}
-
-.leaflet-control-scale-line {
-  -webkit-transition: width 100ms ease;
-      transition: width 100ms ease;
-}
-
-
-
-
-
-
-
-.leaflet-control-layers-expanded {
-  color: inherit;
-  border-radius: 0;
-}
-
-
-
-.leaflet-control-scale-line {
-  color: inherit;
 }
