--- a/ui/style/table.css
+++ b/ui/style/table.css
@@ -1,11 +1,3 @@
-.dark .table { border-color: #555; }
-.dark .table th { background-color: #444; }
-.dark .table-invalid-row td { background-color: #551414; }
-.dark .table tr:nth-child(even) {
-  color: #aaa;
-  background-color: transparent;
-}
-
 .table {
   border-collapse: collapse;
   white-space: nowrap;
@@ -21,8 +13,13 @@
 
 .table-header {
   position: sticky;
-  top: 0px;
+  top: 0;
   background-color: var(--table-head-bg-color);
+  outline: 1px solid var(--table-border-color);  
+}
+
+.table-corner {
+  text-align: right;
 }
 
 /* make firefox inherit border-color for cells */
@@ -30,14 +27,17 @@
   border-color: inherit;
 }
 
-.table td,
 .table th {
+  box-shadow: 2px 2px 0 -1px var(--table-border-color) inset;
+}
+
+.table td {
   border-width: 1px;
   border-style: solid;
   padding: .2em;
 }
 
-.table__cell {
+.table-cell {
   /* truncate long cells */
   max-width: 50em;
   overflow: hidden;
@@ -45,18 +45,18 @@
   white-space: pre;
 }
 
-.table__cell--num {
+.table-cell--num {
   text-align: right;
 }
 
-.table__cell:focus {
+.table-cell:focus {
   /* expand cell content on focus */
   white-space: pre;
   overflow-wrap: break-word;
 }
 
-/* .table__colheader is all TH except row number */
-.table__colheader {
+/* .table-colheader is all TH except row number */
+.table-colheader {
   width: 6em;
 }
 
@@ -66,7 +66,7 @@
  *  ┼─────────┼─
  *  │     │
  */
-.table__coltype {
+.table-coltype {
   display: block;
   opacity: .5; /* mute color */
   font-size: .5em;
@@ -74,33 +74,27 @@
 }
 
 /* row number */
-.table__corner::before {
+.table-corner::before {
   content: '#';
 }
-.table__rowHeader {
+.table-rowheader {
   text-align: right;
   font-weight: bold;
 }
-.table__rowHeader::before {
-  /*counter-increment: rownum;*/
-  /*content: counter(rownum);*/
-}
-.table > tbody {
-  counter-reset: rownum;
-}
-.table__newRow > .table__rowHeader::before {
+
+.table-newrow > .table-rowheader::before {
   content: '*';
 }
 
 /* empty TD are nulls */
-.table__cell:empty::before {
+.table-cell:empty::before {
   content: 'null';
   font-style: italic;
   font-size: smaller;
   opacity: .5;
 }
 
-.table__cell--emptystr::before {
+.table-cell--emptystr::before {
   content: 'empty string';
 }
 
@@ -108,49 +102,6 @@
 .table-has-blankrow > tbody > tr:last-child {
   opacity: .5;
 }
-
-.table-submitting-row {
-  animation: 'move-stripes' .2s linear infinite;
-  /*-webkit-animation: 'move-stripes' .2s linear infinite;
-     -moz-animation: 'move-stripes' .2s linear infinite;
-      -ms-animation: 'move-stripes' .2s linear infinite;*/
-
-  background-size: 1em 100%;
-  background-image: linear-gradient(45deg
-                      ,rgba(0,0,0, 0)   0
-                      ,rgba(0,0,0, 0)  20%
-                      ,rgba(0,0,0,.1)  20%
-                      ,rgba(0,0,0,.1)  40%
-                      ,rgba(0,0,0, 0)  40%
-                      ,rgba(0,0,0, 0)  60%
-                      ,rgba(0,0,0,.1)  60%
-                      ,rgba(0,0,0,.1)  80%
-                      ,rgba(0,0,0, 0)  80%
-                      ,rgba(0,0,0, 0) 100%);
-
-}
-
-@keyframes move-stripes {
-    0% { background-position: 0 0; }
-  100% { background-position: 1em 0; }
-}
-
-/*
-@-webkit-keyframes move-stripes {
-    0% { background-position: 0 0; }
-  100% { background-position: 1em 0; }
-}
-
-@-moz-keyframes move-stripes {
-    0% { background-position: 0 0; }
-  100% { background-position: 1em 0; }
-}
-
-@-ms-keyframes move-stripes {
-    0% { background-position: 0 0; }
-  100% { background-position: 1em 0; }
-}
-*/
 
 .table-delete_row {
   border: none;
@@ -256,8 +207,4 @@
 .table-row--deleted {
   color: #aaa;
   text-decoration: line-through;
-}
-
-.table-row--invalid {
-  -background-color: red !important;
 }
