--- a/ui/style/execbar.css
+++ b/ui/style/execbar.css
@@ -5,7 +5,7 @@
   background-color: var(--bg);
 }
 
-/*button*/.execbar-execute {
+/*button*/.execbar-btn {
   outline: none;
   margin: 0;
   padding: 0;
